--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "google-translate": "^2.3.0",
     "nedb": "^1.8.0",
     "node-fetch": "^2.6.0"
   }
