--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "module3",
   "version": "1.0.0",
   "description": "This is a version of 'weather here' app by Joey Lee.",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,6 +18,7 @@
     "express": "^4.16.4",
     "google-translate": "^2.3.0",
     "nedb": "^1.8.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^1.19.1"
   }
 }
